[package]
name = "image-hash"
version = "0.1.1"
authors = ["sardonicism-04 <110789901+sardonicism-04@users.noreply.github.com>"]
edition = "2018"

[dependencies]
image = "0.23.14"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[lib]
name = "image_hash"
crate-type = ["cdylib"]